1122 가상함수 복습

--- a/1122_가상함수/1122_가상함수/1122_가상함수.vcxproj
+++ b/1122_가상함수/1122_가상함수/1122_가상함수.vcxproj
@@ -127,7 +127,9 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="main.cpp" />
+    <ClCompile Include="main_myown.cpp" />
+    <ClCompile Include="main_0.cpp" />
+    <ClCompile Include="main_1.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
