--- a/1122_가상함수/1122_가상함수/1122_가상함수.vcxproj.filters
+++ b/1122_가상함수/1122_가상함수/1122_가상함수.vcxproj.filters
@@ -15,7 +15,13 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="main.cpp">
+    <ClCompile Include="main_myown.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="main_0.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="main_1.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
